[gd_scene load_steps=16 format=2]

[ext_resource path="res://settings/settings.gd" type="Script" id=1]
[ext_resource path="res://theme/kenny/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://theme/kenny/kenneyUI-yellow.tres" type="Theme" id=3]
[ext_resource path="res://picture/close_hover.png" type="Texture" id=4]
[ext_resource path="res://picture/close.png" type="Texture" id=5]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="ButtonGroup" id=7]

[sub_resource type="ButtonGroup" id=8]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 140, 60 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "slide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 140, -625 ), Vector2( 140, 60 ) ]
}

[node name="Settings" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 60.0
margin_right = 1140.0
margin_bottom = 660.0
theme = ExtResource( 2 )

[node name="Close" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.5
margin_top = -14.0
margin_right = 13.5
margin_bottom = 22.0
focus_neighbour_left = NodePath("../VBox/Continue")
focus_neighbour_bottom = NodePath("../VBox/Continue")
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="Scroll" type="ScrollContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -225.0
margin_right = 400.0
margin_bottom = 225.0
theme = ExtResource( 3 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="Container" type="HBoxContainer" parent="Panel/Scroll"]
margin_right = 788.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Labels" type="VBoxContainer" parent="Panel/Scroll/Container"]
margin_right = 204.0
margin_bottom = 600.0
custom_constants/separation = 48

[node name="Language" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_right = 204.0
margin_bottom = 33.0
text = "Language"

[node name="Texture" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 81.0
margin_right = 204.0
margin_bottom = 114.0
text = "Texture"

[node name="Animation" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 162.0
margin_right = 204.0
margin_bottom = 195.0
text = "Animation"

[node name="Hint" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 243.0
margin_right = 204.0
margin_bottom = 276.0
text = "Hint"

[node name="Shadow" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 324.0
margin_right = 204.0
margin_bottom = 357.0
text = "Shadow"

[node name="AA" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 405.0
margin_right = 204.0
margin_bottom = 438.0
text = "AntiAliasing"

[node name="Vsync" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 486.0
margin_right = 204.0
margin_bottom = 519.0
text = "V-sync"

[node name="FrameRate" type="Label" parent="Panel/Scroll/Container/Labels"]
margin_top = 567.0
margin_right = 204.0
margin_bottom = 600.0
text = "FrameRate"

[node name="Sep" type="VSeparator" parent="Panel/Scroll/Container"]
margin_left = 234.0
margin_right = 238.0
margin_bottom = 600.0

[node name="Settings" type="VBoxContainer" parent="Panel/Scroll/Container"]
margin_left = 268.0
margin_right = 754.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Language" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_right = 486.0
margin_bottom = 57.0

[node name="En" type="Button" parent="Panel/Scroll/Container/Settings/Language"]
margin_right = 241.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "English"

[node name="Zh" type="Button" parent="Panel/Scroll/Container/Settings/Language"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "中文"

[node name="Texture" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 77.0
margin_right = 486.0
margin_bottom = 134.0

[node name="Fabric" type="Button" parent="Panel/Scroll/Container/Settings/Texture"]
margin_right = 241.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Fabric"

[node name="Metal" type="Button" parent="Panel/Scroll/Container/Settings/Texture"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 2 )
text = "Metal"

[node name="Animation" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 154.0
margin_right = 486.0
margin_bottom = 211.0

[node name="Fast" type="Button" parent="Panel/Scroll/Container/Settings/Animation"]
margin_right = 159.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "Fast"

[node name="Norm" type="Button" parent="Panel/Scroll/Container/Settings/Animation"]
margin_left = 163.0
margin_right = 322.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 3 )
text = "Normal"

[node name="Disabled" type="Button" parent="Panel/Scroll/Container/Settings/Animation"]
margin_left = 326.0
margin_right = 486.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "Disabled"

[node name="Hint" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 231.0
margin_right = 486.0
margin_bottom = 288.0

[node name="On" type="Button" parent="Panel/Scroll/Container/Settings/Hint"]
margin_right = 241.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 4 )
text = "On"

[node name="Off" type="Button" parent="Panel/Scroll/Container/Settings/Hint"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 4 )
text = "Off"

[node name="Shadow" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 308.0
margin_right = 486.0
margin_bottom = 365.0

[node name="On" type="Button" parent="Panel/Scroll/Container/Settings/Shadow"]
margin_right = 241.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 5 )
text = "On"

[node name="Off" type="Button" parent="Panel/Scroll/Container/Settings/Shadow"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 5 )
text = "Off"

[node name="AA" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 385.0
margin_right = 486.0
margin_bottom = 442.0

[node name="High" type="Button" parent="Panel/Scroll/Container/Settings/AA"]
margin_right = 97.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 6 )
text = "High"

[node name="Medium" type="Button" parent="Panel/Scroll/Container/Settings/AA"]
margin_left = 101.0
margin_right = 224.324
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 6 )
text = "Medium"

[node name="Low" type="Button" parent="Panel/Scroll/Container/Settings/AA"]
margin_left = 228.0
margin_right = 325.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 6 )
text = "Low"

[node name="Disabled" type="Button" parent="Panel/Scroll/Container/Settings/AA"]
margin_left = 329.0
margin_right = 486.324
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 6 )
text = "Disabled"

[node name="Vsync" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 462.0
margin_right = 486.0
margin_bottom = 519.0

[node name="On" type="Button" parent="Panel/Scroll/Container/Settings/Vsync"]
margin_right = 241.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 7 )
text = "On"

[node name="Off" type="Button" parent="Panel/Scroll/Container/Settings/Vsync"]
margin_left = 245.0
margin_right = 486.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 7 )
text = "Off"

[node name="FrameRate" type="HBoxContainer" parent="Panel/Scroll/Container/Settings"]
margin_top = 539.0
margin_right = 486.0
margin_bottom = 596.0

[node name="F120" type="Button" parent="Panel/Scroll/Container/Settings/FrameRate"]
margin_right = 111.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 8 )
text = "120"

[node name="F60" type="Button" parent="Panel/Scroll/Container/Settings/FrameRate"]
margin_left = 115.0
margin_right = 226.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 8 )
text = "60"

[node name="F30" type="Button" parent="Panel/Scroll/Container/Settings/FrameRate"]
margin_left = 230.0
margin_right = 342.0
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 8 )
text = "30"

[node name="Default" type="Button" parent="Panel/Scroll/Container/Settings/FrameRate"]
margin_left = 346.0
margin_right = 486.324
margin_bottom = 57.251
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 8 )
text = "Default"

[node name="Sep2" type="VSeparator" parent="Panel/Scroll/Container"]
margin_left = 784.0
margin_right = 788.0
margin_bottom = 600.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
anims/RESET = SubResource( 9 )
anims/slide = SubResource( 10 )

[connection signal="pressed" from="Panel/Close" to="." method="do_hide"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Language/En" to="." method="_on_en_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Language/Zh" to="." method="_on_zh_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Texture/Fabric" to="." method="_on_fabric_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Texture/Metal" to="." method="_on_metal_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Animation/Fast" to="." method="_on_animation_fast_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Animation/Norm" to="." method="_on_animation_norm_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Animation/Disabled" to="." method="_on_animation_disabled_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Hint/On" to="." method="_on_hint_on_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Hint/Off" to="." method="_on_hint_off_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Shadow/On" to="." method="_on_shadow_on_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Shadow/Off" to="." method="_on_shadow_off_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/AA/High" to="." method="_on_aa_high_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/AA/Medium" to="." method="_on_aa_medium_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/AA/Low" to="." method="_on_aa_low_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/AA/Disabled" to="." method="_on_aa_disabled_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Vsync/On" to="." method="_on_vsync_on_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/Vsync/Off" to="." method="_on_vsync_off_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/FrameRate/F120" to="." method="_on_framerate_120_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/FrameRate/F60" to="." method="_on_framerate_60_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/FrameRate/F30" to="." method="_on_framerate_30_pressed"]
[connection signal="pressed" from="Panel/Scroll/Container/Settings/FrameRate/Default" to="." method="_on_framerate_default_pressed"]
